--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-type-animation": "^3.2.0",
     "react-typed": "^2.0.12",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
